# vapoursynth-tivtc

./: meson.build
src/: Cycle.cpp  Cycle.h  PluginInit.cpp  TCommonASM.cpp  TCommonASM.h  TDecimate.cpp  TDecimate.h  TDecimateASM.cpp  TDecimateASM.h  TDecimateBlur.cpp  TDecimateMode2.cpp  TDecimateMode7.cpp  TDecimateOut.cpp  TFM.cpp  TFM.h  TFMD2V.cpp  TFMPP.cpp  TFMPP.h  TFMPlanar.cpp  calcCRC.cpp  calcCRC.h  cpufeatures.cpp  cpufeatures.h  internal.h
